--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,37 +1,5 @@
-<div class="wrap-component">
-  <!-- <md-input-container>
-    <input md-input placeholder="Date" />
-  </md-input-container>
 
-  <md-input-container>
-    <input md-input placeholder="Time" />
-  </md-input-container>
+<!-- <label><button type="button" name="btnLogin" (click)="login()">Login</button>If you do have an account</label>
+<label><button type="button" name="btnRegister" (click)="register()">Register</button>You still don't have an account?</label> -->
 
-  <md-input-container>
-    <input md-input placeholder="Capacity" />
-  </md-input-container> -->
-
-    <input md-input placeholder="Date" />
-    <input md-input placeholder="Time" />
-    <input md-input placeholder="Capacity" />
-
-
-  <label><input #ref (click)="checked()" type="checkbox"/>Show only available</label>
-  <!-- <md-checkbox>Show only available</md-checkbox> -->
-  <!-- <label><input type="checkbox">Show only available</label> -->
-
-  <br />
-
-  <button (click)="clicked()" md-button>Show rooms</button>
-
-  <div *ngIf="showRooms && isChecked">
-    <div *ngFor="let room of rooms | filterAvailable: ref.checked">
-      <room [number]="room.number" [available]="room.available" [capacity]="room.capacity"></room>
-    </div>
-  </div>
-
-  <div *ngIf="showRooms && !isChecked">
-    <div *ngFor="let room of rooms">
-      <room [number]="room.number" [available]="room.available" [capacity]="room.capacity"></room>
-    </div>
-  </div>
+<router-outlet></router-outlet>
