Implement Take Return buttons functionality, work with the db

--- a/client/src/app/components/room-list/room-list.component.html
+++ b/client/src/app/components/room-list/room-list.component.html
@@ -26,12 +26,12 @@
 
   <div *ngIf="showRooms && isChecked">
     <div *ngFor="let room of rooms | filterAvailable: ref.checked">
-      <room [number]="room.number" [available]="room.available" [capacity]="room.capacity"></room>
+      <room [number]="room.number" [available]="room.available" [capacity]="room.capacity" [id]="room.id"></room>
     </div>
   </div>
 
   <div *ngIf="showRooms && !isChecked">
     <div *ngFor="let room of rooms">
-      <room [number]="room.number" [available]="room.available" [capacity]="room.capacity"></room>
+      <room [number]="room.number" [available]="room.available" [capacity]="room.capacity" [id]="room.id" [room]="room"></room>
     </div>
   </div>
