--- a/client/src/app/components/room/room.component.html
+++ b/client/src/app/components/room/room.component.html
@@ -7,5 +7,6 @@
     <p class="info">Capacity: {{capacity}}</p>
     <p class="info">Available: {{available}}</p>
   </div>
-  <button md-button class="btnTake">TAKE</button>
+  <button md-button class="btnTake" (click)="updateRoom()">TAKE</button>
+  <button md-button class="btnReturn" (click)="updateRoom()">RETURN</button>
 </md-card>
