--- a/client/src/app/components/room/room.component.css
+++ b/client/src/app/components/room/room.component.css
@@ -3,6 +3,15 @@
   background-color: green;
   color: white;
   position: absolute;
+  right: 15%;
+  width: 80px;
+}
+
+.btnReturn {
+  height: 40px;
+  background-color: green;
+  color: white;
+  position: absolute;
   right: 5%;
   width: 80px;
 }
