--- a/client/src/app/components/login/login.component.html
+++ b/client/src/app/components/login/login.component.html
@@ -1,5 +1,5 @@
 <form>
   <input type="text" name="username" placeholder="Username" required/>
-  <input type="text" name="password" placeholder="Password" required/>
-  <button type="button" name="button">Login</button>
+  <input type="password" name="password" placeholder="Password" required/>
+  <button type="button" name="button" (click)="login()">Login</button>
 </form>
